@@ -909,6 +909,7 @@ _circuit_mark_for_close(circuit_t *circ, int reason, int line,
          * are closing because the circuit is getting torn down.  No need
          * to send an end cell. */
         conn->_base.edge_has_sent_end = 1;
+        conn->end_reason = END_STREAM_REASON_DESTROY;
         connection_mark_for_close(TO_CONN(conn));
       }
       conn->on_circuit = NULL;
